# Language-Toolkit-2

./: .gitignore  .hlint.yaml  .mailmap  CHANGELOG.md  ConstraintCompiler.lhs  Containers.lhs  Dot.lhs  Exploratorium.lhs  Exporters.lhs  ExtractSL.lhs  ExtractSP.lhs  FSA.lhs  Factors.lhs  Jeff.lhs  LICENSE  LTK.cabal  LogicClasses.lhs  MoreExporters.lhs  MoreFactors.lhs  Mungers.lhs  Pleb.lhs  Porters.lhs  README.md  ReadJeff.lhs  SLfactors.lhs  SPTest.lhs  Tiers.lhs  Traversals.lhs  accepts.lhs  birdify  cabal.project  constraints.ods  debirdify  default.css  dotify.1  dotify.lhs  factorize.lhs  hierarchy.dot  index.html  klamath.lhs  (+8 more)
classify/: Main.lhs
code/: index.html
docs/: INSTALL  index.html  plebSyntax.txt  plebbyGuide.txt  usingFactorize.txt
docs/haddock/: Containers.html  ExtractSL.html  ExtractSP.html  FSA.html  Factors.html  LTK-Algebra.html  LTK-Containers.html  LTK-Decide-Acom.html  LTK-Decide-B.html  LTK-Decide-CB.html  LTK-Decide-Definite.html  LTK-Decide-DotDepth.html  LTK-Decide-FO2.html  LTK-Decide-Finite.html  LTK-Decide-GD.html  LTK-Decide-GLPT.html  LTK-Decide-GLT.html  LTK-Decide-JoinVariety.html  LTK-Decide-LAcom.html  LTK-Decide-LPT.html  LTK-Decide-LT.html  LTK-Decide-LTT.html  LTK-Decide-Multitier.html  LTK-Decide-PT.html  LTK-Decide-SF.html  LTK-Decide-SL.html  LTK-Decide-SP.html  LTK-Decide-SPL.html  LTK-Decide-TLAcom.html  LTK-Decide-TLPT.html  LTK-Decide-TLT.html  LTK-Decide-TLTT.html  LTK-Decide-TSL.html  LTK-Decide-Trivial.html  LTK-Decide-Variety.html  LTK-Decide.html  LTK-DecideM.html  LTK-DecideS.html  LTK-Extract-SL.html  LTK-Extract-SP.html  (+52 more)
dotify/: Main.lhs
examples/: alawa.plebby  amele.plebby  cambodian.plebby  index.html  nubian.plebby  stressConstraints.plebby  syllableStress.pleb  tutorial.pleb  yidin.plebby
factorize/: Main.lhs
make-non-strict-constraints/: Main.lhs
make-non-strict-constraints/LTK/: ConstraintCompiler.lhs
man/: classify.1  dotify.1  pleb.5  plebby.1
man/fr/: classify.1  dotify.1  pleb.5  plebby.1
plebby/: Main.lhs
plebby/LTK/Plebby/: Help.lhs
src/: LTK.lhs
src/LTK/: Algebra.lhs  Containers.lhs  Decide.lhs  DecideM.lhs  DecideS.lhs  Extract.lhs  ExtractSL.lhs  ExtractSP.lhs  FSA.lhs  Factors.lhs  Parameters.lhs  Porters.lhs  Tiers.lhs  Traversals.lhs
src/LTK/Decide/: Acom.lhs  B.lhs  CB.lhs  Definite.lhs  DotDepth.lhs  FO2.lhs  Finite.lhs  GD.lhs  GLPT.lhs  GLT.lhs  JoinVariety.lhs  LAcom.lhs  LPT.lhs  LT.lhs  LTT.lhs  MTD.lhs  Multitier.lhs  PT.lhs  SF.lhs  SL.lhs  SP.lhs  SPL.lhs  TLAcom.lhs  TLPT.lhs  TLT.lhs  TLTT.lhs  TSL.lhs  Trivial.lhs  Variety.lhs
src/LTK/Extract/: SL.lhs  SP.lhs  TSL.lhs
src/LTK/Learn/: SL.lhs  SP.lhs  StringExt.lhs  TSL.lhs
src/LTK/Learn/TSL/: AugmentedSubsequences.lhs  ViaSL.lhs
src/LTK/Porters/: ATT.lhs  Corpus.lhs  Dot.lhs  EggBox.lhs  Jeff.lhs  Pleb.lhs  SyntacticOrder.lhs  SyntacticSemilattice.lhs
