cabal-version:       >=1.10
name:                LTK

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            A set of tools for analyzing languages via logic and automata
homepage:            https://github.com/vvulpes0/Language-Toolkit-2
license:             MIT
license-file:        LICENSE
author:              Dakotah Lambert, James Rogers
maintainer:          49007668+vvulpes0@users.noreply.github.com
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:  dotify.1

library
  -- Modules exported by the library.
  exposed-modules:
                  LTK
                , LTK.Containers
                , LTK.ExtractSL
                , LTK.ExtractSP
                , LTK.Factors
                , LTK.FSA
                , LTK.Porters
                , LTK.Porters.Dot
                , LTK.Porters.Jeff
                , LTK.Porters.Pleb
                , LTK.Tiers
                , LTK.Traversals
  -- Modules included in this library but not exported.
  -- other-modules:
  build-depends:
                base >=4.12 && <4.13
              , containers >=0.6 && <0.7
              , deepseq >=1.4 && <1.5
              , parallel >=3.2 && <3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -O2

executable dotify
  hs-source-dirs: dotify
  main-is: Main.lhs
  build-depends:
                base >=4.12 && <4.13
              , LTK
              , containers >=0.6 && <0.7
              , deepseq >=1.4 && <1.5
              , parallel >=3.2 && <3.3
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded "-with-rtsopts=-N -qg1 -C0.001"

executable factorize
  hs-source-dirs: factorize
  main-is: Main.lhs
  build-depends:
                base >=4.12 && <4.13
              , LTK
              , containers >=0.6 && <0.7
              , deepseq >=1.4 && <1.5
              , directory >=1.3 && <1.4
              , filepath >=1.4 && <1.5
              , parallel >=3.2 && <3.3
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded "-with-rtsopts=-N -qg1 -C0.001"

executable make-non-strict-constraints
  hs-source-dirs: make-non-strict-constraints
  main-is: Main.lhs
  other-modules: LTK.ConstraintCompiler
  build-depends:
                base >=4.12 && <4.13
              , LTK
              , containers >=0.6 && <0.7
              , deepseq >=1.4 && <1.5
              , parallel >=3.2 && <3.3
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded "-with-rtsopts=-N -qg1 -C0.001"

executable plebby
  hs-source-dirs: plebby
  main-is: Main.lhs
  build-depends:
                base >=4.12 && <4.13
              , LTK
              , containers >=0.6 && <0.7
              , deepseq >=1.4 && <1.5
              , haskeline >=0.7 && <0.8
              , parallel >=3.2 && <3.3
              , process >=1.6 && <1.7
              , transformers >=0.5 && <0.6
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded "-with-rtsopts=-N -qg1 -C0.001"
