cabal-version:       >=1.10
name:                language-toolkit

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.0.0

synopsis:            A set of tools for analyzing languages via logic and automata
category:            Formal Languages
description:         This provides the Language Toolkit (LTK) library
                     and associated executables.
                     There are four main components:
                     .
                     * @factorize@,
                       which takes as input a set of finite-state automata
                       and writes out for each one a set of constraints
                       that approximates (or, if possible, defines) it.
                     .
                     * @plebby@,
                       an interactive theorem-prover in which one can
                       define languages via logical constraints
                       or import finite-state automata
                       and get information about the languages so defined.
                     .
                     * @classify@,
                       a command-line classification program useful
                       for batch jobs.
                     .
                     * And the @LTK@ library,
                       which includes the functions used by
                       @factorize@ and @plebby@
                       as well as several other useful tools.
                     .
                     This project began as a simple tool for working with
                     finite-state automata, and has grown considerably more
                     useful in working specifically with sub-regular languages
                     as it has matured.
homepage:            https://github.com/vvulpes0/Language-Toolkit-2
license:             MIT
license-file:        LICENSE
author:              Dakotah Lambert, James Rogers
copyright:           (c) 2014-2022 Dakotah Lambert
maintainer:          Dakotah Lambert <dakotahlambert@acm.org>
tested-with:         GHC ==8.0.2
                   , GHC ==8.6.5
                   , GHC ==8.10.1
                   , GHC ==9.0.2
build-type:          Simple
extra-source-files:  man/classify.1
                   , man/dotify.1
                   , man/plebby.1
                   , man/pleb.5

source-repository head
  type:      git
  location:  git://github.com/vvulpes0/Language-Toolkit-2.git
  branch:    develop

library
  -- Modules exported by the library.
  exposed-modules:
                  LTK
                , LTK.Algebra
                , LTK.Containers
                , LTK.Decide
                , LTK.Decide.B
                , LTK.Decide.CB
                , LTK.Decide.Definite
                , LTK.Decide.Finite
                , LTK.Decide.FO2
                , LTK.Decide.GD
                , LTK.Decide.GLPT
                , LTK.Decide.GLT
                , LTK.Decide.LPT
                , LTK.Decide.LT
                , LTK.Decide.LTT
                , LTK.Decide.PT
                , LTK.Decide.SF
                , LTK.Decide.SL
                , LTK.Decide.SP
                , LTK.Decide.TLT
                , LTK.Decide.TLPT
                , LTK.Decide.TLTT
                , LTK.Decide.Trivial
                , LTK.Decide.TSL
                , LTK.DecideM
                , LTK.Extract
                , LTK.Extract.SL
                , LTK.Extract.SP
                , LTK.Extract.TSL
                , LTK.Factors
                , LTK.FSA
                , LTK.Learn.SL
                , LTK.Learn.SP
                , LTK.Learn.StringExt
                , LTK.Learn.TSL
                , LTK.Learn.TSL.AugmentedSubsequences
                , LTK.Learn.TSL.ViaSL
                , LTK.Porters
                , LTK.Porters.ATT
                , LTK.Porters.Corpus
                , LTK.Porters.Dot
                , LTK.Porters.Jeff
                , LTK.Porters.Pleb
                , LTK.Tiers
                , LTK.Traversals
  -- Modules included in this library but not exported.
  -- other-modules:
  build-depends: base >=4.2 && <4.17
               , containers >=0.5 && <0.7
               , deepseq >=1.1 && <1.5
               , parallel >=1.0 && <3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -O2 -feager-blackholing

executable dotify
  hs-source-dirs: dotify
  main-is: Main.lhs
  build-depends: base >=4.2 && <4.17
               , language-toolkit
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded "-with-rtsopts=-N -qg1 -C0.001"

executable factorize
  hs-source-dirs: factorize
  main-is: Main.lhs
  build-depends: base >=4.6 && <4.17
               , language-toolkit
               , containers >=0.1 && <0.7
               , deepseq >=1.2 && <1.5
               , directory >=1.0 && <1.4
               , filepath >=1.0 && <1.5
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -feager-blackholing
               "-with-rtsopts=-N -qg1 -C0.001"

executable make-non-strict-constraints
  hs-source-dirs: make-non-strict-constraints
  main-is: Main.lhs
  other-modules: LTK.ConstraintCompiler
  build-depends: base >=4.0 && <4.17
               , language-toolkit
               , containers >=0.1 && <0.7
               , deepseq >=1.2 && <1.5
               , parallel >=2.0 && <3.3
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded "-with-rtsopts=-N -qg1 -C0.001"

executable plebby
  hs-source-dirs: plebby
  main-is: Main.lhs
  build-depends: base >=4.2 && <4.17
               , language-toolkit
               , haskeline >=0.2 && <0.9
               , process >=1.1 && <1.7
               , transformers >=0.2 && <0.6
               , directory >=1.0 && <1.4
               , filepath >=1.0 && <1.5
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded "-with-rtsopts=-N -qg1 -C0.001"

executable classify
  hs-source-dirs: classify
  main-is: Main.lhs
  build-depends: base >=4.2 && <4.17
               , containers >=0.1 && <0.7
               , language-toolkit
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded "-with-rtsopts=-N -qg1 -C0.001"
